chore:update daily

--- a/index.html
+++ b/index.html
@@ -275,36 +275,32 @@
                 transform: rotate(360deg);
             }
         }
-
-        #bgmAudio {
-            position: absolute;
-            visibility: hidden;
-        }
     </style>
 </header>
 
 <body>
     <div class="coffee_cup loader"></div>
     <div class="home" style="display: none;">
-        <h3 class="principle" title="principle">Simple! So Charming!
-            <img id='rotate' src="./assets/img/sun.svg" width="20" height="20" type="image/svg+xml" /></h3>
+        <h3 class="principle">生命以负<span title='傲慢、贪婪、色欲、嫉妒、暴食、愤怒、怠惰'>熵</span>为食
+            <img id='rotate' src="./assets/img/sun.svg" width="20" height="20" title='愿你今日美好' type="image/svg+xml" /></h3>
         <div class="content-wrap">
             <div class="intro">
-                <p class="intro-line"><b>你好!</b> 很高兴遇见你！ 你可以叫我 —— <b>阿燃</b>！</p>
-                <p class="intro-line">我的职业是一名<a href='https://baike.baidu.com/item/前端开发工程师'>前端开发工程师</a>。</p>
+                <p class="intro-line"><b>你好!</b> 遇见即是缘起，很高兴能遇见你！你可以叫我 —— <b>阿燃</b>！</p>
+                <p class="intro-line">我是一名<a href='https://baike.baidu.com/item/前端开发工程师'>前端开发工程师</a>。</p>
                 <p class="intro-line">我使用 GitHub Page 托管 <a href='https://tuaran.github.io'>我的博客</a>，用于分享交流技术与生活。</p>
                 <p class="intro-line">非常欢迎你能到我的<a href="https://github.com/TUARAN">仓库主页</a>互相 follow ! 互相 <b>⭐star⭐</b>！
                 </p>
                 <p class="intro-line">你也可在这些地方找到我：<a href="https://juejin.im/user/5bcd67a8e51d457947022910">掘金</a>、<a
                         href="https://blog.csdn.net/qq_37969897/">CSDN</a>、<a
                         href="https://www.zhihu.com/people/tu-tu-tu-tu-tu-25-1">知乎</a>、<a
-                        href="https://www.huxiu.com/member/2412214.html">虎嗅</a>。我将在这些平台保持活跃，欢迎交流。</p>
+                        href="https://www.huxiu.com/member/2412214.html">虎嗅</a>。我将在这些平台保持活跃，你愿意与我同行吗？</p>
                 <p class="intro-line surprise"><span id='f12' title="F12 / Ctrl+Shift+C" class="btn-f12">F12</span> 有彩蛋!
                 </p>
                 <p class="intro-line"></p>
                 <p class="intro-line">同时，我在自己的 ECS 上搭建了一些 web 服务。致力于做<b>有用的</b>个人站点！以下：</p>
                 <p class="intro-line">1. 前端书签网 <a href="http://febm.tuaran.site">febm.tuaran.site</a></p>
                 <p class="intro-line">2. 每日一立 <a href="http://ddup.tuaran.site">ddup.tuaran.site</a></p>
+                <p class="intro-line">3. 图床服务 <a href="http://120.78.205.57:3000">tarsFigureBed</a></p>
             </div>
         </div>
 
@@ -315,10 +311,6 @@
                     class="bottom-link" href='https://search.google.com/search-console'> Google Search
                     Console</a></div>
         </div>
-        <!-- <audio id='bgmAudio' controls src="./assets/audio/comebacktome.mp3" autoplay="autoplay">
-            Your browser does not support the
-            <code>audio</code> element.
-        </audio> -->
     </div>
 </body>
 <script>
@@ -326,7 +318,7 @@
     console.log("1. 加我微信号😁：", "Ifuckinghigh")
     console.log("2. Base📍：", "广州")
     console.log("3. 毕业院校🏫：", "华南师大")
-    console.log("4. focus 👀：", "股票、科哲神学（feat.量子力学）、电影解说、微信读书、壁纸制作、老 JRS、老祖安狂人 etc.")
+    console.log("4. focus 👀：", "股票、科哲神学（feat.量子力学）、电影解说、微信读书、壁纸制作、JRS、老祖安狂人 etc.")
     console.log("----------------------- 网站相关 -----------------------")
     console.log("1. loading and network information🔍:", chrome.loadTimes())
     console.log("2. 阿里云推荐码🐎：https://www.aliyun.com/minisite/goods?userCode=nk1m1mfv");
