style:update daily

--- a/index.html
+++ b/index.html
@@ -264,16 +264,20 @@
             <div class="footer-p ">Statistic Analysis Power By <a class="bottom-link" target="_blank"
                     href='https://analytics.google.com/analytics/web/provision/#/provision'>Google Analytics</a> | <a
                     target="_blank" class="bottom-link" href='https://search.google.com/search-console'> Google Search
-                    Console</a></div>
+                    Console</a> | <a class="bottom-link" href="https://cloud.google.com">More Support</a></div>
         </div>
         <div class="footer-p uareawsome">
-            <div id="resume" title="这都被发现了，好啦，算你厉害！">| RESUME |</div>
+            <div id="resume" title="这都被你发现了，好啦，算你厉害！">| RESUME |</div>
         </div>
     </div>
 </body>
 <script>
     console.log("----------------------- 更多相关 -----------------------\n诚邀志同道合者同行 ~\n")
     console.log("1. 加我微信号😁：", "Ifuckinghigh")
+    var consoleImg = '%c' + ' '
+    console.log(consoleImg,
+        "padding:66px 88px;background:url('http://tuaran.site:3001/uploads/61dd3e7989a9f2af212818b1ae726f4d.jpg') no-repeat;background-size:contain;"
+        );
     console.log("2. Base📍：", "广州")
     console.log("3. 毕业院校🏫：", "华南师大")
     console.log("4. 我还关注👀：")
